--- a/views/links/new.erb
+++ b/views/links/new.erb
@@ -4,3 +4,13 @@
   Add Tag: <input type="text" name="add_tag">
   <input type="submit" name="add_link" value="Add Link">
 </form>
+
+
+<form action="/tags/:name">
+  <input type="submit" value="Go to links page">
+</form>
+
+
+<!-- <form action="/tags/bubbles" method="post">
+  <input type="submit" value="Bubbles">
+</form> -->
