--- a/views/links.erb
+++ b/views/links.erb
@@ -10,5 +10,10 @@
 </ul>
 
 <form action="/links/new">
-  <input type="submit" value="Go to links page">
+  <input type="submit" value="Add links">
+</form>
+
+<form action="/tags" method="post">
+  <input type="text" name="name">
+  <input type="submit" value="Search for links">
 </form>
