End of challenge 16

--- a/views/links.erb
+++ b/views/links.erb
@@ -14,6 +14,6 @@
 </form>
 
 <form action="/tags" method="post">
-  <input type="text" name="name">
+  <input type="text" name="filter_tags">
   <input type="submit" value="Search for links">
 </form>
