--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,8 +1,8 @@
 <h1>Sign up for an account!<h1>
 
   <form action="/signup-details" method="post">
-    <input type="text" name="username">
-    <input type="text" name="email">
-    <input type="text" name="password">
+    Username: <input type="text" name="username">
+    Email: <input type="text" name="email">
+    Password: <input type="text" name="password">
     <input type="submit" value="Sign Up">
   </form>
