fixed flash error message and stored email address to improve user experience password mismatch happens

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,9 @@
   <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
+  <% if flash[:error] %>
+    <p><%= flash[:error] %></p>
+    <% end %>
   <%=yield%>
 </body>
 </html>
